@@ -1,44 +1,36 @@
 package com.close.hook.ads.hook.gc;
 
+import android.util.Log;
+
 import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 import com.close.hook.ads.hook.util.HookUtil;
-
 import de.robv.android.xposed.XposedBridge;
+import de.robv.android.xposed.XposedHelpers;
 
 public class HideEnvi {
 
-    private static final Set<String> XPOSED_MAGISK_PATHS = Set.of(
-            "/sbin/.magisk",
-            "/system/bin/magisk",
-            "//system/bin/magiskpolicy",
-            "/data/adb/lspd",
-            "/data/adb/modules",
-            "/data/adb/magisk",
-            "/system/bin/su",
-            "/system/xbin/su",
-            "/system/sbin/su",
-            "/bin/su",
-            "/sbin/su",
-            "/vendor/bin/su",
-            "/system/bin/.ext/.su",
-            "/su/bin/su"
-    );
+    private static final String TAG = "HideEnvi";
 
-    private static final Set<String> XPOSED_MEMORY_FEATURES = Set.of(
-            "xposed.installer",
-            "app_process_xposed",
-            "libriru_",
-            "/data/misc/edxp_",
-            "libxposed_art.so",
-            "libriruloader.so",
-            "app_process_zposed",
-            "liblspd.so",
-            "libriru_edxp.so"
+    private static final Set<String> SENSITIVE_PATHS = new HashSet<>(Arrays.asList(
+            "/system/bin/su", "/system/xbin/su", "/sbin/su", "/su/bin/su",
+            "/data/local/xbin/su", "/data/local/bin/su", "/system/sd/xbin/su",
+            "/system/bin/.ext/.su", "/data/adb/magisk", "/data/adb/lspd",
+            "/system/usr/we-need-root/", "/cache/", "/data/local/", "/dev/"
+    ));
+
+    private static final Set<String> MEMORY_FEATURES = Set.of(
+            "xposed.installer", "app_process_xposed", "libriru_", "liblspd.so",
+            "libriruloader.so", "libxposed_art.so", "magisk"
     );
 
     public static void handle() {
@@ -53,64 +45,92 @@ public class HideEnvi {
             File file = (File) param.thisObject;
             String path = file.getAbsolutePath();
             if (isSensitivePath(path)) {
-                XposedBridge.log("HideEnvi: Hiding path existence for: " + path);
                 param.setResult(false);
             }
         });
     }
 
     private static boolean isSensitivePath(String path) {
-        return XPOSED_MAGISK_PATHS.stream().anyMatch(path::startsWith);
+        return SENSITIVE_PATHS.stream().anyMatch(path::contains) || path.contains("magisk");
     }
 
     private static void hookRuntimeExecutions() {
         HookUtil.hookAllMethods(Runtime.class, "exec", "before", param -> {
-            String[] cmdArray = null;
-            if (param.args[0] instanceof String[]) {
-                cmdArray = (String[]) param.args[0];
-            } else if (param.args[0] instanceof String) {
-                cmdArray = new String[]{(String) param.args[0]};
+            Object arg = param.args[0];
+            String command = "";
+            if (arg instanceof String) {
+                command = (String) arg;
+            } else if (arg instanceof String[]) {
+                command = String.join(" ", (String[]) arg);
             }
 
-            if (cmdArray != null && cmdArray.length > 0) {
-                String command = cmdArray[0].toLowerCase();
-                if (command.contains("su") || command.contains("which") || command.contains("mount") ||
-                    command.contains("getprop") || command.contains("id") || command.contains("busybox")) {
-                    if (isXposedMagiskDetectedInMemory()) {
-                        param.setResult(null);
-                        return;
-                    }
-                }
+            if (command.isEmpty()) return;
+
+            if (command.contains("su") || command.contains("which")) {
+                param.args[0] = new String[]{"sh", "-c", "exit 1"};
+                return;
+            }
+
+            if (command.contains("getprop")) {
+                param.setResult(createFakeProcess("[ro.debuggable]: [0]\n[ro.secure]: [1]\n[ro.build.tags]: [release-keys]"));
             }
         });
     }
 
-    private static boolean isXposedMagiskDetectedInMemory() {
-        try (BufferedReader reader = new BufferedReader(new FileReader("/proc/self/maps"))) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                if (XPOSED_MEMORY_FEATURES.stream().anyMatch(line::contains) ||
-                    ((line.contains("/.magisk") || line.contains("MAGISK_INJ_")) && line.contains("r-xp"))) {
-                    XposedBridge.log("HideEnvi: Detected Xposed/Magisk features in memory map: " + line);
-                    return true;
-                }
+    private static Process createFakeProcess(final String output) {
+        return new Process() {
+            @Override
+            public OutputStream getOutputStream() {
+                return null;
             }
-        } catch (IOException e) {
-            XposedBridge.log("HideEnvi Error reading /proc/self/maps: " + e.getMessage());
-        }
-        return false;
+
+            @Override
+            public InputStream getInputStream() {
+                return new ByteArrayInputStream(output.getBytes());
+            }
+
+            @Override
+            public InputStream getErrorStream() {
+                return new ByteArrayInputStream(new byte[0]);
+            }
+
+            @Override
+            public int waitFor() {
+                return 0;
+            }
+
+            @Override
+            public int exitValue() {
+                return 0;
+            }
+
+            @Override
+            public void destroy() {}
+        };
     }
 
     private static void hookSystemProperties() {
         HookUtil.hookAllMethods("android.os.SystemProperties", "get", "before", param -> {
             String key = (String) param.args[0];
-            if (isXposedMagiskProperty(key)) {
+            if ("ro.debuggable".equals(key)) {
+                param.setResult("0");
+            } else if ("ro.secure".equals(key)) {
+                param.setResult("1");
+            } else if (key.toLowerCase().contains("magisk") || key.toLowerCase().contains("xposed")) {
                 param.setResult("");
             }
         });
-    }
 
-    private static boolean isXposedMagiskProperty(String key) {
-        return key.toLowerCase().contains("xposed") || key.toLowerCase().contains("magisk");
+        HookUtil.hookAllMethods("android.os.SystemProperties", "getInt", "before", param -> {
+            String key = (String) param.args[0];
+            if ("ro.debuggable".equals(key)) param.setResult(0);
+            if ("ro.secure".equals(key)) param.setResult(1);
+        });
+
+        HookUtil.hookAllMethods("android.os.SystemProperties", "getBoolean", "before", param -> {
+            String key = (String) param.args[0];
+            if ("ro.debuggable".equals(key)) param.setResult(false);
+            if ("ro.secure".equals(key)) param.setResult(true);
+        });
     }
 }
